syntax = "proto3";
package proto;
option go_package = "/proto";

import "entity.proto";
import "google/protobuf/struct.proto";

import "google/api/annotations.proto";

// ============================================================================
// Create (FR-327-334)
// ============================================================================

message CreatePostRequest {
  string community_id                = 1;
  string title                       = 2;  // 3-300 chars
  google.protobuf.Struct content     = 3;  // JSON structured content
}

message CreatePostResponse {
  Post post = 1;
}

// ============================================================================
// Get (FR-208, FR-213)
// ============================================================================

message GetPostRequest {
  string post_id = 1;
}

message GetPostResponse {
  Post post = 1;
}

// ============================================================================
// Update (FR-376-383)
// ============================================================================

message UpdatePostRequest {
  string post_id                    = 1;
  string title                      = 2;
  google.protobuf.Struct content    = 3;
}

message UpdatePostResponse {}

// ============================================================================
// Delete (FR-209)
// ============================================================================

message DeletePostRequest {
  string post_id = 1;
}

message DeletePostResponse {}

// ============================================================================
// ListComments (FR-217, FR-220, FR-221)
// ============================================================================

message ListPostCommentsRequest {
  string post_id = 1;
  string cursor  = 2;
  int32 limit    = 3;
}

message ListPostCommentsResponse {
  repeated Comment comments = 1;
  string next_cursor        = 2;
  bool has_more             = 3;
}

// ============================================================================
// Publish (FR-210)
// ============================================================================

message PublishPostRequest {
  string post_id = 1;
}

message PublishPostResponse {
  Post post = 1;
}

// ============================================================================
// Unpublish (FR-211)
// ============================================================================

message UnpublishPostRequest {
  string post_id = 1;
}

message UnpublishPostResponse {
  Post post = 1;
}

// ============================================================================
// Like (FR-171, FR-175, FR-177, FR-178)
// ============================================================================

message LikePostRequest {
  string post_id = 1;
}

message LikePostResponse {
  string message       = 1;
  int32 new_like_count = 2;
}

// ============================================================================
// Unlike (FR-172, FR-176)
// ============================================================================

message UnlikePostRequest {
  string post_id = 1;
}

message UnlikePostResponse {
  string message       = 1;
  int32 new_like_count = 2;
}

// ============================================================================
// CreateBookmark (FR-165, FR-169)
// ============================================================================

message CreateBookmarkRequest {
  string post_id = 1;
}

message CreateBookmarkResponse {
  string message = 1;
}

// ============================================================================
// DeleteBookmark (FR-166)
// ============================================================================

message DeleteBookmarkRequest {
  string post_id = 1;
}

message DeleteBookmarkResponse {
  string message = 1;
}

// ============================================================================
// Service Definition
// ============================================================================

service PostService {
  // CRUD Operations
  rpc Create(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = {
      post: "/posts"
      body: "*"
    };
  }

  rpc Get(GetPostRequest) returns (GetPostResponse) {
    option (google.api.http) = {
      get: "/posts/{post_id}"
    };
  }

  rpc Update(UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = {
      patch: "/posts/{post_id}"
      body: "*"
    };
  }

  rpc Delete(DeletePostRequest) returns (DeletePostResponse) {
    option (google.api.http) = {
      delete: "/posts/{post_id}"
    };
  }

  // List Operations
  rpc ListComments(ListPostCommentsRequest) returns (ListPostCommentsResponse) {
    option (google.api.http) = {
      get: "/posts/{post_id}/comments"
    };
  }

  // Status Management
  rpc Publish(PublishPostRequest) returns (PublishPostResponse) {
    option (google.api.http) = {
      post: "/posts/{post_id}/publish"
    };
  }

  rpc Unpublish(UnpublishPostRequest) returns (UnpublishPostResponse) {
    option (google.api.http) = {
      post: "/posts/{post_id}/unpublish"
    };
  }

  // Like Operations
  rpc Like(LikePostRequest) returns (LikePostResponse) {
    option (google.api.http) = {
      post: "/posts/{post_id}/like"
    };
  }

  rpc Unlike(UnlikePostRequest) returns (UnlikePostResponse) {
    option (google.api.http) = {
      delete: "/posts/{post_id}/like"
    };
  }

  // Bookmark Operations
  rpc CreateBookmark(CreateBookmarkRequest) returns (CreateBookmarkResponse) {
    option (google.api.http) = {
      post: "/posts/{post_id}/bookmark"
    };
  }

  rpc DeleteBookmark(DeleteBookmarkRequest) returns (DeleteBookmarkResponse) {
    option (google.api.http) = {
      delete: "/posts/{post_id}/bookmark"
    };
  }
}
